# agent-eval

./: README.md  app.js  history.html  index.html  pyproject.toml  server.js  style.css
examples/: sample_config.json  sample_output.txt  sample_request.json
js/: app.js  configs.js  evaluator.js  strategies.js
public/: app.js  index.html  styles.css
src/agent_eval/: __init__.py  __main__.py  cli.py  criteria.py  engine.py  models.py  storage.py  types.py  utils.py  web.py
src/agent_eval/strategies/: __init__.py  base.py  heuristic.py  rule_based.py  statistical.py
src/agent_eval/templates/: index.html
tests/: test_api.py  test_cli.py  test_engine.py
