[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval"
version = "0.1.0"
description = "Professional toolkit for evaluating AI agent outputs with heuristic and API-driven workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["ai", "agent", "evaluation", "fastapi", "cli"]
dependencies = [
  "click>=8.1,<9",
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "uvicorn>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9"
]

[project.scripts]
agent-eval = "agent_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
